Fixed built-in health check configuration detection - use getMapKeys and getListSize instead of yaml-specific Map/List detection, that will be removed in KumuluzEE 4.1.0